--- a/Java정리/220517.md
+++ b/Java정리/220517.md
@@ -4,7 +4,7 @@
 - [메소드호출?](../Plus.java)
 - [변수? 선언? 초기화? 이름짓는 방법?](../Add.java)
 - [정수/실수?](../MulDiv.java)  
-- 컴파일? JVM? CLI/GUL? 인코딩?
+- 컴파일? JVM? CLI/GUL? 문자인코딩?
 
 
 ![220517](./img/20220517.jpg)
