--- a/Java정리/220517.md
+++ b/Java정리/220517.md
@@ -1,9 +1,9 @@
   
-- [주석? 메인메소드?](../Hello.java)
-- [문자열?](../PrintName.java)
-- [메소드호출?](../Plus.java)
-- [변수? 선언? 초기화? 이름짓는 방법?](../Add.java)
-- [정수/실수?](../MulDiv.java)  
+- [주석? 메인메소드?](../0517/Hello.java)
+- [문자열?](../0517/PrintName.java)
+- [메소드호출?](../0517/Plus.java)
+- [변수? 선언? 초기화? 이름짓는 방법?](../0517/Add.java)
+- [정수/실수?](../0517/MulDiv.java)  
 - 컴파일? JVM? CLI/GUL? 문자인코딩?
 
 
