정리 내용 추가

--- a/Java정리/220518.md
+++ b/Java정리/220518.md
@@ -1,9 +1,16 @@
-- [사용자 콘솔 입력 -> 입력값에 대한 연산 -> 결과 콘솔 출력](../0518/Add2.java) 
-- [몫과 나머지](../0518/Mod.java)
-	>예제  
-	>1. [초단위를 입력받아 시간 분 초로 변환을 하는 프로그램](../0518/Clock.java)
-	>2. [사용자가 입력한 5자리 정수를 역순으로 출력하는 프로그램](../0518/Reverse.java)
-- [정수type/실수type](../0518/CircleArea.java)
+- [사용자 콘솔 입력 -> 입력값에 대한 연산 -> 결과 콘솔 출력](../0518/Add2.java) (by Scanner class)  
+  ```
+  import java.util.Scanner;  
+  Scanner aaa = new Scanner(System.in);  
+  int bbb = aaa.nextInt(); //이렇게 한 세트라고 기억!
+  ```
+- [몫과 나머지](../0518/Mod.java)  
+
+	예제 1. [초단위를 입력받아 시간 분 초로 변환을 하는 프로그램](../0518/Clock.java)  
+	예제 2. [사용자가 입력한 5자리 정수를 역순으로 출력하는 프로그램](../0518/Reverse.java)
+- [정수/실수](../0518/CircleArea.java)  
+
+	정수와 실수를 혼용하는 과정에서 계산에 논리오류가 생기는 경우 주의! -> [참조](../0518/P73_3.java)
 - notepad++의 NppExec플러그인 스크립트 작성
 	```
 	cd "$(CURRENT_DIRECTORY)"  
@@ -12,8 +19,7 @@
 	cd "$(CURRENT_DIRECTORY)"  
 	java $(NAME_PART) //실행 매크로
 	```
-- notepad++에서 쓰이는 단축키들
-
+- notepad++에서 쓰이는 단축키들  
   
   - `ctrl`+`Q` : 주석달기
   - `ctrl`+`D` : 줄 복사
