--- a/Java정리/220519.md
+++ b/Java정리/220519.md
@@ -1,9 +1,9 @@
 > 자료형 Overview
 > - 기초형(원시형) : 실제 값이 저장
->   - [정수형](../0519/IntegerTypes.java) byte, short, int, long
->   - [실수형](../0519/FloatTypes.java) float, double
->	- [문자형](../0519/CharTypes.java) char
->	- [논리형](../0519/BooleanType.java) boolean
+>   - [정수형](../0519/IntegerTypes.java) **byte, short, int, long** -> 적절히 넉넉한 int사용
+>   - [실수형](../0519/FloatTypes.java) **float, double**	-> 넉넉한 double사용
+>	- [문자형](../0519/CharTypes.java) **char** -> 꼭! 홑따옴표
+>	- [논리형](../0519/BooleanType.java) **boolean**
 > - 참조형 : 실제 객체를 가리키는 주소 저장  
 >	    예) Scanner aa = new Scanner(System.in);
 - printf 서식
@@ -20,9 +20,9 @@ System.out.printf("%s에 살고있습니다", 서울); //%s는 문자열!
 >	- `\"` 쌍따옴표
 - [변수 값 교환](../0519/Swap.java) -> 변수 재할당시에는 위에서 아래로 읽는 흐름에 주의!
 - [복합대입연산자](../0519/IncDec.java)
-- [증감연산자](../0519/AutoInc.java) -> ++가 붙은 위치에 따라 의미가 다름을 이해
-- [관계연산자](../0519/RelOper.java)
-- [논리연산자](../0519/LogicalOper.java) -> 활용 [예제](../0519/TestRange.java)  
+- [증감연산자](../0519/AutoInc.java) -> only 1씩, ++가 붙은 위치에 따라 의미가 다름을 이해.
+- [관계연산자](../0519/RelOper.java) -> 결과값이 T/F
+- [논리연산자](../0519/LogicalOper.java) -> T/F끼리 엮어 하나의 T/F값 출력. 활용 [예제](../0519/TestRange.java)  
 	
 ----
 > [마무리문제](../0519/T0519_4.java)  
