--- a/Java정리/220520.md
+++ b/Java정리/220520.md
@@ -1,19 +1,26 @@
-- 220519.md 수정 //upload with 220520.md
-- readme 220520 추가
-
-- TestTypes질문???????????
-- TestString에 true???????
-- 선언 DiffBigSmall?????
-
-- 논리연산자 && || !
-- 형변환
-- 자동적 형변환, 자료형의 확장
-- 명시적 형변환, 자료형의 축소, 자료 손실
-- 참조형 타입 String
-- 문자열의 길이와 문자 인덱스 범위
-- 문자열의 동등함 비교
-- 기초형을 문자열로 변환
-- Scanner문자열 콘솔 입력
-- block과 범위scope
-- 지역변수와 범위
-- 조건문 if-then, if-else, if-else if
+- [! not](../0520/NotOperator.java) : 논리값 뒤집기
+- [형변환](../0520/TestTypes.java)
+  - 자동적 형변환 : 수식에 서로 다른 자료형 -> 큰 타입으로 자동 변환
+  - 명시적 형변환 : 축소변환(정보손실위험), 확대변환(안전)
+  - [계산 예제](../0520/TypeConversion.java)
+- [String](../0520/TestString.java) (type은 참조형)
+  - 문자 인덱스 개념알기
+  - [.charAt() .length()](../0520/TestString2.java) 메소드 : 인덱스로 문자 호출, 문자열 길이
+  - [.indexOf()](../0520/StringMethods.java) 메소드 : 문자 찾기
+  - [.equals()](../0520/StringEquals.java) 메소드 : 참조형에서 값의 동등 비교
+  - [정수형을 문자열에 넣기](../0520/IntegerToString.java) : String.valueOf(), "" +
+  - Scanner로 문자열 입력 받을 시 [주의사항](../0520/InputString.java)  
+	-> [활용 예시](../0520/T0520_1.java)
+- [block Scope](../0520/BlockScope.java) : \{\} 단위  
+  -> 지역변수는 변수가 선언된 블록 내에서만 유효
+- 조건문
+  - [if-then](../0520/TestIf.java)  
+   -> [예제1](../0520/Umbrella.java) 날씨를 물어보고 "비"를 입력받으면 우산을 챙기라는 문자열 출력  
+   -> [예제2](../0520/DiffBigSmall.java) 정수 2개를 입력받아 큰 수 에서 작은 수로 나눈 몫과 나머지를 출력  
+  - [if-else](../0520/EvenOdd.java)  
+   -> [예제](../0520/Biggest.java) 세개의 정수를 입력받아 가장 큰 수를 출력 --> if-else if로 연결
+  - [if-else if](../0520/TestElseIf.java)  
+ ----
+> [마무리문제](../0520/MiniCal.java)  
+>  정수 2개와 연산자(문자열)를 입력받아 사칙연산을 수행하는 계산기
+  
