--- a/Java정리/220523.md
+++ b/Java정리/220523.md
@@ -1,5 +1,16 @@
-- if-else 한줄 {}생략
-- it-else 축약
-- 반복문 
+- [if-else 팁](../0523/OnelineIf.java)
+  - 한 문장일 경우, \{\} 생략 가능
+  - ?(삼항 연산자)를 사용하여 간단한 if-else문 축약 가능
+- 반복문  
+	\: while의 개념을 기본으로 하여 for까지 확장
   - while
-  - for
+  - for  
+----
+> [마무리문제](../0523/T0523.java)
+>  1. 2의 1승부터 32승까지 나열하시오
+>  2. 사용자가 입력한 n, m애 대해 n^m을 출력
+>  3. \[자판기\] 1번 콜라:1500, 2번 사이다:1300, 3번 계산  
+>	 -> 총 몇 개의 캔을 구입하고, 거스름돈은 얼마인지 출력
+>  4. 사용자가 입력한 정수의 약수를 나열하고 총 개수를 출력
+>  5. 사용자가 입력한 5개의 정수 중 가장 큰 수를 출력
+>  6. 사용자가 입력한 영단어에서 모음이 몇 개인지 출력  
