--- a/Java정리/220523.md
+++ b/Java정리/220523.md
@@ -3,8 +3,20 @@
   - ?(삼항 연산자)를 사용하여 간단한 if-else문 축약 가능
 - 반복문  
 	\: while의 개념을 기본으로 하여 for까지 확장
-  - while
-  - for  
+  - **[while](../0523/Loop1.java)** : while (조건) {true일때 반복할 문장}  
+    - 외부의 변수를 잡아서 그것을 조건으로 썼을 때에는 while을 많이 사용
+    - [활용 예제1](../0523/Loop2.java) 정해진 범위 안에서 역순배열, 배수나열, ★☆★☆..
+	- [활용 예제2](../0523/Loop3.java) 정해진 범위 안에서 조건(or||을 사용)에 맞는 수 배열  
+	- [구구단](../0523/Gugudan.java) Scanner 도입
+  - **for** : for (선언;조건;증감) {true일때 반복할 문장}  
+    - 단순하게 횟수를 반복해서 처리해야 할 때는 for를 많이 사용 -> 지역변수를 써서 for문에서만 쓰고 땡
+	- [for문의 특징](../0523/LoopFor1.java)
+	- [활용 예제](../0523/LoopFor2.java)
+	- [count](../0523/Count.java) 조건을 만족하는 애들의 갯수? -> 외부에 변수 따로두기
+	- [sum](../0523/Sum.java) 조건을 만족하는 애들의 합? -> 외부에 변수 따로두기
+	- 반복문 안에 사용자입력창(Scanner)    
+	  - [사용자가 입력한 5개 정수의 합](../0523/SumNum5.java)
+	  - [입력할 정수의 갯수도 사용자가 정하기](../0523/SumNumX.java)
 ----
 > [마무리문제](../0523/T0523.java)
 >  1. 2의 1승부터 32승까지 나열하시오
