--- a/Java정리/220520.md
+++ b/Java정리/220520.md
@@ -9,7 +9,7 @@
   - [.indexOf()](../0520/StringMethods.java) 메소드 : 문자 찾기
   - [.equals()](../0520/StringEquals.java) 메소드 : 참조형에서 값의 동등 비교
   - [정수형을 문자열에 넣기](../0520/IntegerToString.java) : String.valueOf(), "" +
-  - Scanner로 문자열 입력 받을 시 [주의사항](../0520/InputString.java)  
+  - nextInt 다음에 nextLine 입력 받을시 [주의사항](../0520/InputString.java)  
 	-> [활용 예시](../0520/T0520_1.java)
 - [block Scope](../0520/BlockScope.java) : \{\} 단위  
   -> 지역변수는 변수가 선언된 블록 내에서만 유효
