--- a/Java정리/220524.md
+++ b/Java정리/220524.md
@@ -10,6 +10,6 @@
 > 1. 369게임
 > 2. 피보나치 수열
 > 3. 입력한 정수가 소수임을 확인
-> 4. 비밀번호를 물어보고 동일할 경우 통과, 최대 3번의 기회
+> 4. 비밀번호를 물어보고 동일할 경우 통과, 최대 3번의 기회 ★★★
 > 5. 2~9 사이의 무작위 수를 정하여 보여주고, 사용자가 해당하는 수의 배수를 순서대로 입력하게 하여 틀리면 종료
 > \+ \(알고리즘\) 유클리드 호제법을 이용한 [최대공약수 구하기](../0524/Gcd.java)  
