--- a/Java정리/220526.md
+++ b/Java정리/220526.md
@@ -1,14 +1,15 @@
 - 메소드 만들기  
   - [기본 개념](../0526/TestMethod.java)  
-  - 메소드 헤드 : 반환type 메소드이름 (파라미터목록) ex) int cal(int a)
-  - 메소드 바디 : \{\~\~문장\~\~\}  
+  \: 자주 사용할 값을 변수이름 정해서 불러내듯이, 자주 사용할 동작을 메소드이름 정해서 불러냄
+  - 메소드 헤드 : 반환type 메소드이름 (파라미터목록) ex) int cal(int a, int b)
+  - 메소드 바디 : \{\~\~문장\~\~\}  ex) \{ return a + b; \}
   - 메인메소드에서 메소드 호출
   - [return의 개념](../0526/TestMethod2.java) : (void -> return type)  
-  - [parameters의 개념](../0526/TestMethod3.java) : 메소드이름(받을 값, 받을 값)  
-	\: 파라미터에 변수이름 넣는 [case](../0526/Methods.java)  
-	\: 파라미터에 참조형 넣는 [case](../0526/MethodRefparam.java)  
+  - [parameters의 개념](../0526/TestMethod3.java) : 메소드이름(받을 값1, 받을 값2, ..)  
+  \: 메소드 호출 시, 파라미터에 변수이름 넣는 [case](../0526/Methods.java)  
+  \: 파라미터 목록에 참조형 넣는 [case](../0526/MethodRefparam.java)  
   \: 파라미터 사용하여 최대값 구하는 [예제](../0526/TestMax.java)  
-	\: 파라미터 사용하여 소수인지 알아내는 [예제](../0529/PrimeNumbers.java)  
+  \: 파라미터 사용하여 소수인지 알아내는 [예제](../0529/PrimeNumbers.java)  
   
 ----
 - [마무리문제](../0526/T0526.java)  
