--- a/Java정리/220527.md
+++ b/Java정리/220527.md
@@ -1,5 +1,9 @@
-- final 변수 = 상수  
+- **final 변수** = 상수  
 	\: [기본개념](../0527/StaticVariableAndConst.java), [block scope](../0527/StaticVariableAndConst2.java)  
-	\: 메소드호출시 파라미터란에 final변수 넣으면? -> [보기](../0527/StaticVariableAndConst3.java)  - static 전역변수- 객체지향
- - 객체(인스턴스)를 만드는 설계도가 클래스  - 필드와 메소드
- - testbox 정리 -> 다시 상자만 생성, 객체는 아직 생성x
+	\: 메소드호출시 파라미터란에 final변수 넣으면? -> [보기](../0527/StaticVariableAndConst3.java)  - [**전역변수**](../0527/Static.java) : `static` 키워드를 써야 동작하지 않아도(객체생성 없어도) 값을 메모리에 넣어둔다- **클래스** : java는 객체지향을 class로 함    - 필드(=값)와 메소드(=동작)로 구성됨  
+  - 객체의 구조(=틀,설계도)인 [클래스를 작성해보고](../0527/Box.java) 작성한 클래스를 [메인메소드에서 가져다 써보기](../0527/TestBox.java)  
+  - 교재의 클래스 [예제](../0527/CarTest.java)  
+  
+  ----
+  > 마무리문제  
+  > \: [Book 클래스](../0527/TestBook.java), [Date 클래스](../0527/TestDate.java), [Movie 클래스](../0527/TestMovie.java) 생성해보기
