--- a/Java정리/220530.md
+++ b/Java정리/220530.md
@@ -1,4 +1,8 @@
 - [생성자](../0530/TestMovie.java)  
+  - 생성자는 **return type 없이** 바로 적으며, 클래스 이름 따오는거니깐 **첫글자 대문자!!**  
+	ex) `public Movie(파라미터) {초기화내용}`  
+	cf) 필드는 값에 맞는 type으로 선언해야 하며, 첫글자 소문자! `public String title;`  
+	cf) 메소드는 **return type 있어야** 하며, 필드이름처럼 **첫글자 소문자!!** `public void movieRun(파라미터) {동작내용}`
   - 기본생성자(자동)  
   - 생성자(수동) -> ★기본생성자 소멸 -> 해결 : [기본생성자 역할할 생성자를 따로 만들어 주기](../0530/Box.java)  
   - 의자 [예제](../0530/Chair.java)
