--- a/Java정리/220531.md
+++ b/Java정리/220531.md
@@ -23,4 +23,4 @@
   - getter setter 빨리 만들기 : 우클릭 - source - generate getter setter  
 ----  
 > [마무리문제](../workspace/220531-02_student/src/TestStudent.java) : 이클립스에서 클래스들 생성해보는거  
-> : [Student클래스](../workspace/220531-02_student/src/Student.java), [Room클래스](../workspace/220531-02_student/src/Room.java)
+> > [Student클래스](../workspace/220531-02_student/src/Student.java), [Room클래스](../workspace/220531-02_student/src/Room.java)
