--- a/Java정리/220603.md
+++ b/Java정리/220603.md
@@ -1,4 +1,4 @@
-- Static
+- [Static](../workspace/220603-01_Static/src/CarTest3.java )★
   - 객체가 아니다
   - 여러개의 인스턴스 생성 안됨. 박스 딱 하나
   - 인스턴스 이름으로 불러오는게 아니라 클래스 이름으로 불러옴
@@ -18,4 +18,10 @@
   - (설명보기)  
     hover ->지구본 선택 ->다른 브라우저에서 열고싶으면 설정에서 browser에서 외부웹브라우저 크롬 등등 : public만 설명해줌
   - (소스보기)  
-    내장된 자바 기본 소스들 ctrl 클릭으로 찾아가기 설정 -> 외부에서 java폴더의 src.zip을 데려오면됨~! : public, private 다 소스로는 보임
+    내장된 자바 기본 소스들 ctrl 클릭으로 찾아가기 설정 -> 외부에서 java폴더의 src.zip을 데려오면됨~! : 소스로는 public, private 다 보임  
+  - [Calendar와 LocalDate](../workspace/220603-02_date/src/Main.java)  
+    - [포멧 바꿔보기](../workspace/220603-02_date/src/DateFormat.java)  
+	- [내일 날짜 출력해보기](../workspace/220603-02_date/src/TestDateMethods.java)  
+----
+> 마무리문제  
+> : [입력한 달에 맞는 달력 출력](../workspace/220603-02_date/src/TestMyCalendar.java)
