--- a/Java정리/220607.md
+++ b/Java정리/220607.md
@@ -13,5 +13,5 @@
   - [교재예제](../workspace/220607-01_array/src/ArrayTest1.java)  
 	: 배열 안의 값을 사용자가 입력 -> 성적계산
  ----
- > [마무리문제]((../workspace/220607-01_array/src/Main5.java))  
+ > [마무리문제](../workspace/220607-01_array/src/Main5.java)  
  > : 사용자가 멈추기 전까지 입력받아 최근 입력 정수 몇 개만 출력하기
