--- a/Java정리/220607.md
+++ b/Java정리/220607.md
@@ -5,13 +5,15 @@
   - 패키지 안에 패키지 가능 -> .을 사용해서 하위패키지 생성
   - 클래스를 찾을 때, 같은 패키지에서 찾고, 없으면 없는거임 -> import 해야 외부 패키지의 클래스 가져오기 가능
   - 접근제한자(public, private)에 아무것도 안쓰면 디폴트/패키지 접근제한자!! -> ★같은 패키지에서만(상위패키지X)! 접근 가능
-- [배열](Java/workspace/220607-01_array/src/Main1.java)
-  - 변수이름 하나로 여러 공간을 사용. 칸 수 -> length, 순서 -> index(0 ~ length-1까지)
-  - [for문과 짝꿍](Java/workspace/220607-01_array/src/Main2.java)
-  - 배열의 선언 및 초기화 [줄여쓰기](Java/workspace/220607-01_array/src/Main3.java)
-  - 배열에서 for문을 사용하여 [메소드 만들어보기](Java/workspace/220607-01_array/src/Main4.java)
-  - [교재예제](Java/workspace/220607-01_array/src/ArrayTest1.java)
+- [배열](../workspace/220607-02_array/src/Main.java)  
+  - 변수이름 하나로 여러 공간을 사용.  
+    - 칸 수 : length  
+    - 순서 : index (0 ~ length-1 까지)  
+  - [for문과 짝꿍~](../workspace/220607-02_array/src/Main2.java)
+  - 배열의 선언 및 초기화 [줄여쓰기](../workspace/220607-02_array/src/Main3.java)
+  - 배열에서 for문을 사용하여 [메소드 만들어보기](../workspace/220607-02_array/src/Main4.java)
+  - [교재예제](../workspace/220607-02_array/src/ArrayTest1.java)
 	: 배열 안의 값을 사용자가 입력 -> 성적계산
  ----
- > [마무리문제](Java/workspace/220607-01_array/src/Main5.java)
+ > [마무리문제](../workspace/220607-02_array/src/Main5.java)  
  > : 사용자가 멈추기 전까지 입력받아 최근 입력 정수 몇 개만 출력하기
