--- a/Java정리/220608.md
+++ b/Java정리/220608.md
@@ -1,10 +1,35 @@
-- 배열 복사하기
-- 배열 확장하기
-- 배열의 동일
-- for-each문 한방향으로 쭉~
-- 파라미터에 ... 가변길이 파라미터
-- 원시형 말고 참조형 타입도 배열된다~
+- [배열의 복사](../workspace/220608-01_array/src/Main2.java)   
+  -> `Arrays.copyOf(배열, 배열길이)`  
+  : 인스턴트 공유가 아니라 새로운 인스턴스에 값만 복사하는 법  
+
+- [배열의 동일](../workspace/220608-01_array/src/Main3.java)  
+  -> `Arrays.equals(배열a, 배열b)`  
+  : 참조하는 인스턴스가 같은게 아니라 값이 똑같을 때 true로 출력하는 법  
+
+- 배열의 출력  
+  -> `Arrays.toString(배열)` : [ 0번값, 1번값, .. ] 형식으로 출력   
+
+- 배열 길이 늘리기  
+	-> `Arrays.copyOf(배열, 배열길이)`를 써서 길이를 늘리면 됨  
+	-> 이를 활용해서 배열 값 붙이기, 배열 값 합 연산하는 [예제](../workspace/220608-01_array/src/Main4.java)
+
+- 배열을 하나의 값으로 채우기	-> `Arrays.fill(배열, 채울값)`  
+
+- 배열에서의 [for-each문](../workspace/220608-01_array/src/Main5.java)  
+	- `for (int i = 0; i < arr.length; i++)` -> `for (int number : arr)`로 줄여씀!  
+	- 한방향으로 밖에 못쓴다  
+	- 배열 값을 변경할 때 보다는 **배열 값을 읽어낼때** 주로 사용
+- [가변길이 파라미터](../workspace/220608-01_array/src/Main6.java) : `메소드이름(type명... 변수이름)`   
+	메소드를 생성 시 파라미터에 배열을 넣어 놓으면 호출할 때도 **배열**이여야만 한다  
+	But, 메소드를 생성 시 파라미터에 배열 대신 가변길이 파라미터를 넣으면 **, 만으로도** 쉽게 호출가능
+- 참조형 타입으로도 배열 만들 수 있다!  
+  - [기본 예제](../workspace/220608-02_ref_type_array/src/Main.java)    
+  - [교재 예제](../workspace/220608-02_ref_type_array/src/CarArrayTest.java) \~\~ 이 예제에서 추가적으로 알 수 있는 것들 \~\~  
+	- class(객체)안에 `toString()`이란 이름의 메소드를 생성해 놓았다면,  
+	  **그 객체**를 출력할때는 \~\~@\~\~ 대신 **그 String서식대로** 나온다!!  
+	- 참조형 배열에서 for-each `for(String s : arr)`, s값에 손대면 arr까지 바뀜 <-원본과 같은 인스턴스라서
+	- 기초형 배열에서 for-each `for(int a : arr)`, a값에 손대도 arr은 그대로 <-원본값을 복사해온 것 뿐이라서
 ----
 > 마무리문제  
-> : 237쪽 1번 2번  
+> : 237쪽 [1번](../workspace/220608-02_ref_type_array/src/P237_1.java) [2번](../workspace/220608-02_ref_type_array/src/P237_2.java)  
 > : 기존의 학생관리 프로그램 배열사용 방식으로 수정 해보기
