--- a/Java정리/220609.md
+++ b/Java정리/220609.md
@@ -1,4 +1,9 @@
 - 해야할것
   - 히스토그램 다시보기
   - 학생관리프로그램 배열로 다시 바꿔보기
-  - 도서관리 프로그램
+  - 도서관리 프로그램  
+    - 궁금한거
+	  - 변수이름은 루프돌면서 안되나? s0 s1 s2이렇게
+	  - format "%인트변수명d" 이런식으로 안됨? https://blog.jiniworld.me/68
+	  - 흐름이 자기 마음대로일때 nextInt 다음에 nextLine오는 경우 상정 어케 함? https://sleepyeyes.tistory.com/22
+	  - 과거에 추가한 책들이 그 Manage m = new Manage에는 기록되어 있었으면 좋겠음,, 나중에 호출하더라도
