--- a/Java정리/220610.md
+++ b/Java정리/220610.md
@@ -1,4 +1,6 @@
-- 추가 정리할 내용 library - test에 주석으로 적혀있습니더~~~~~~
+- 추가 정리할 내용 library - test에 주석으로 적혀있습니더~~~~~~  
+  - int와 long보다도 큰 수 담기위해 아예 수를 문자열로 받는 bigInteger
+  - Integer.parseInt~
 - 정렬알고리즘이란??? -> 검색해보면 많이 나옴 장단점이 다 다름
 - 정렬을 더 배워보자
   - 삽입정렬 insertionSort 디버그 해보면서 파악하기
