--- a/Java정리/220609.md
+++ b/Java정리/220609.md
@@ -1,9 +1,30 @@
-- 해야할것
-  - 히스토그램 다시보기
-  - 학생관리프로그램 배열로 다시 바꿔보기
-  - 도서관리 프로그램  
-    - 궁금한거
-	  - 변수이름은 루프돌면서 안되나? s0 s1 s2이렇게
-	  - format "%인트변수명d" 이런식으로 안됨? https://blog.jiniworld.me/68
-	  - 흐름이 자기 마음대로일때 nextInt 다음에 nextLine오는 경우 상정 어케 함? https://sleepyeyes.tistory.com/22
-	  - 과거에 추가한 책들이 그 Manage m = new Manage에는 기록되어 있었으면 좋겠음,, 나중에 호출하더라도
+- 도서관리 프로그램  
+  - [book](../Java/workspace/220609-01_library/src/Book.java)클래스, [library](../Java/workspace/220609-01_library/src/Library.java)클래스, [manage](../Java/workspace/220609-01_library/src/Manage.java)클래스, [test](../Java/workspace/220609-01_library/src/Test.java)클래스
+  - 문자 간격 맞추기
+    1. `\t` 이용  
+    2. format 이용
+  ```
+  =========format 정리=========
+  %5d : 5자리, 오른쪽 정렬  
+  %05d : 5자리, 공란은 0으로 채움, 오른쪽 정렬  
+  %-5d : 5자리, 왼쪽 정렬  
+  %,d : 천의자리마다 쉼표
+  -----------------------  
+  %12s : 최소 12자리, 오른쪽 정렬 //        tete//
+  %-12s : 최소 12자리, 왼쪽 정렬 
+  %.2s : 최대 2자리 -> 넘어가면 짜름 //te//
+  &12.2s : 공간은 12자리, 내용물은 2자리 //          te//  
+  ----------------
+  참조 https://blog.jiniworld.me/68
+  ```
+  - nextInt와 nextLine이 같이 쓰이는 경우 엔터공란 처리  
+    1. nextInt(+ nextLine) 세트처럼 사용해서 공백을 미리 제거!  
+    2. 모두 nextLine으로 받아서 정수라면 형변환을 해줌! + 예외처리 필요
+    3. int를 받는 스캐너와 String을 받는 스캐너를 따로 생성해줌!  
+    ```java
+    Scanner scanI = new Scanner(System.in);  
+    Scanner scanS = new Scanner(System.in);  
+    ```
+    
+Q. 변수이름은 루프돌면서 안되나? s0 s1 s2이렇게  
+Q. format "%인트변수명d" 이런식으로 안됨?  
