--- a/Java정리/220610.md
+++ b/Java정리/220610.md
@@ -1,27 +1,28 @@
 ### 도서관 관리 프로그램에서 사용되었던 기능들
-- [배열의 메소드](../Java/workspace/220610-01_whatwasused/src/Main.java)
+- [배열의 메소드](../workspace/220610-01_whatwasused/src/Main.java)
   - `Arrays.sort(arr);` -> 작은수부터 큰수로 정렬해줌
     - 정렬알고리즘? 검색해 보면 많이 나옴. 각자 장단점이 다 다르다~
 	- 예) 삽입정렬 insertionSort 디버그 해보면서 파악하기
   - `Arrays.binarySearch(arr, 값);` -> 값을 찾으면 그 인덱스를 알려줌
-- [Wrapper class](../Java/workspace/220610-01_whatwasused/src/Main2.java)
+- [Wrapper class](../workspace/220610-01_whatwasused/src/Main2.java)
   - 기초형을 객체로 만들면 다양한 기능(메소드)를 사용할 수 있게된다
   - Integer 예시  
     - `Integer.valueOf(int형, String형 모두 가능)` : boxing
 	- `Integer.intvlaue()` : unboxing
 	- 박싱 언박싱은 java에서 자동으로 가능! 굳이 변환과정 안쳐도 Integer변수에 Int변수에 넣을 수 있다
 	- `Integer.parseInt(String형)` : String -> int
-  - 수를 문자열로 받아내기! [(BigInteger, BigDecimal)](../Java/workspace/220610-01_whatwasused/src/Main3.java)  
+  - 수를 문자열로 받아내기! [(BigInteger, BigDecimal)](../workspace/220610-01_whatwasused/src/Main3.java)  
 	타입별 최대최소값 생각하지 않아도 되며, 부정확한 수도 원하는대로 출력할 수 있다 
 ----	
 	
-- [이중배열](../Java/workspace/220610-02_arrayofarray/src/Main.java)  
-  - `int\[\]\[\] arr = new int\[세로\]\[가로\]` 
+- [이중배열](../workspace/220610-02_arrayofarray/src/Main.java)  
+  - `int[][] arr = new int[세로][가로]` 
   - `arr.length` : 세로 수!!! 
   - `arr[0].length` : 가로 수!! (첫번째 줄(index0)의)
-  - [이중배열에서 쓰는 메소드](../Java/workspace/220610-02_arrayofarray/src/Main2.java)는  `Arrays.deepToString(arr);` `Arrays.deepEquals(arr1, arr2);`
-  - 이중배열에 랜덤수를 받아와 각 행열의 합을 구해보는 [예제](../Java/workspace/220610-02_arrayofarray/src/Main3.java)
-- [Method Overloading](../Java/workspace/220610-03_method/src/Main.java)
-  - [교제 예제](../Java/workspace/220610-03_method/src/CarTest2.java)  
-  - [자판기 예제](../Java/workspace/220610-03_method/src/Main2.java)
+  - [이중배열에서 쓰는 메소드](../workspace/220610-02_arrayofarray/src/Main2.java)는  `Arrays.deepToString(arr);` `Arrays.deepEquals(arr1, arr2);`
+  - 이중배열에 랜덤수를 받아와 각 행열의 합을 구해보는 [예제](../workspace/220610-02_arrayofarray/src/Main3.java)
+- [Method Overloading](../workspace/220610-03_method/src/Main.java)  
+  - 메소드 동일? 고려사항? 메소드이름(O) 파라미터타입(O) 파라미터갯수(O) 리턴타입(X)
+  - [교제 예제](../workspace/220610-03_method/src/CarTest2.java)  
+  - [자판기 예제](../workspace/220610-03_method/src/Main2.java)
 
