--- a/Java정리/220614.md
+++ b/Java정리/220614.md
@@ -1,11 +1,14 @@
-- 상속 -> 형변환 [상향형변환/하향형변환](../workspace/220613-02_exercise/scr/P264_4.java) 
-  - 자식에게 추가된 메소드 : 부모로 형변환 되었을땐 사용 X
-  - 자식이 오버라이드한 메소드 : 부모로 형변환 되었다면 부모에도 있는 메소드라 실행됨. 단 body는 자식것으로 읽음!
-- [object클래스](../workspace/220613-01_inheritance/scr/AnimalTest.java)
+- [상속에서의 형변환](../workspace/220613-02_exercise/src/P264_4.java)  
+  - 상향형변환(upcast) 
+    - 자식 -> 부모로 형변환 시, 자식이 추가한 메소드는 사용불가!
+    - 하지만, 자식이 오버라이드한 메소드는.. 부모에도 있는 메소드라 실행되긴 하나 body는 자식것으로 읽음!
+  - 하향형변환(downcast)
+    - 의식적 형변환 과정과, instanceof가 필요함
+- [object클래스](../workspace/220613-01_inheritance/src/AnimalTest.java) : 최상단에 있는 class
   - toString override
-  - [equals override](../workspace/220614-01_objectClass/scr/Main.java)
-  - toString도 우클릭 source에 빠르게 생성하기 존재
-  - equals도 우클릭 source에 빠르게 생성하기 존재 (같아야 할 필드고르기와 instanceof까지도 넣을 수 있다)
+  - [equals override](../workspace/220614-01_objectClass/src/Main.java)
+  - toString과 equals도 우클릭 source에 빠르게 생성하기 존재  
 ----
 > 마무리문제  
-> : [헬스장 회원관리프로그램](../workspace/220614-01_objectClass/scr/T0614.java)
+> : [헬스장 회원관리프로그램](../workspace/220614-01_objectClass/src/T0614.java)  
+> -> 시리얼넘버 부여하기, 배열에서 null참조인 젤 빠른 index구해서 활용하기, null에러의 경우 상정하기
