--- a/Java정리/220615.md
+++ b/Java정리/220615.md
@@ -1,25 +1,34 @@
-- abstract 리턴타입 앞에 적음 -> 추상메소드
-- 동작에 대한 구체적X = body가 없다! 중괄호 없어야함!
-- 메소드 헤드만 존재
-- 일반적인 클래스에서는 추상메소드 존재할 수 없다(인스턴스화시 추상메소드때문에 미완의 객체가 되어버림)
-- 그래서 추상클래스에서만 추상메소드를 가질 수 있다
-- 부모가 추상클래스라면 자식이 물려받았을때 그 추상메소드를 구체화 해서 오버라이드 해줘야만 함! 안하면 얘도 추상적이게됨
-- 우클릭 -> source - override implement method에가면 빠른생성가능
+- 추상메소드
+  - `public abstract 리턴타입 메소드이름();` 
+  - body없이 head만 존재 -> 중괄호 없으니 `메소드이름()`하고서 ★`;`으로 끝난다!
+- 추상클래스
+  - 일반적인 클래스에서는 추상메소드 존재할 수 없다 (인스턴스화하면 추상메소드때문에 미완의 객체가 되어버리므로)
+  - 추상메소드를 가지면 추상클래스로 만들어 줘야 한다
+  - `제한접근자 abstract class 클래스이름 {}`
+  - ★추상클래스는 extends되어야 제 역할 하는 것!
+- 구현하기  
+  - 추상클래스를 물려받은 자식은 부모의 추상메소드를 구체화(오버라이드 with body)해줘야할 의무! (안하면 얘도 추상적이됨)  
+  - 오바라이드는 우클릭 -> source -> override implement method에가면 빠른생성가능  
+  - \[예제\] [Shape(추상클래스)](../workspace/220615-01_abstract/src/Shape.java), [Triangle(자식클래스)](../workspace/220615-01_abstract/src/Triangle.java), [Main(실행)](../workspace/220615-01_abstract/src/Main.java)
 
-- final class 종단클래스 더이상 확장불가!
-- final method 종단메소드 더이상 오버라이드 불가!
+- 종단선언  
+  - final class 종단클래스 : 더이상 확장불가!
+  - final method 종단메소드 : 더이상 오버라이드 불가!
+  - \[예제\] [부모클래스(추상)](../workspace/220615-02_abstractEX/src/MyClass.java), [자식클래스](../workspace/220615-02_abstractEX/src/MySubClass.java), [손자클래스](../workspace/220615-02_abstractEX/src/MyImpleClass.java)
 
-- 인터페이스 : 추상적 동작을 나타냄 (think 날수있다)
-- ★다중상속이 안된다는 점은 인터페이스로 극복 -> 클래스 다이어그램 참조
-- class대신에 interface적으면 됨
-- (I + )첫글자 대문자, '~할수있음'과 같은 단어로 보통 설정 Flyable IFlyable
-- 상속할때는 사용할 클래스 뒤에 (implements 인터페이스이름) 붙이면 됨
--> 해당 클래스에서는 추상메소드를 구현해줘야한다 by 오버라이드(재정의)
-- interface끼지 배열로 묶기가 가능하다
-- interface는 interface를 상속가능;; extends(O) implements(X) 자식interface는 구현없이 추상메소드만 생성하면됨
-- interface는 class가 아니므로 new연산자로 인스턴스생성 안된다!!!
+- [인터페이스](../workspace/220615-03_interface/src/Flyable.java) : 추성적 동작만 
+  - 필드도 없이! 추상메소드(-able)만 존재 : java가 다중상속이 안된다는 점을 인터페이스로 극복
+  - -> `public abstract 리턴타입 메소드이름();`에서 `public abstract`는 고정이므로 ★생략가능
+  - class대신에 interface적으면 됨, (I+)첫글자 대문자 -> 예) Flyable IFlyable
+  - 상속할때는 `클래스이름 (extends 부모클래스이름) implements 인터페이스이름`
+  - 결국은 추상메소드만 있는 추상클래스가 인터페이스이므로, 자식클래스에서는 추상메소드를 구현해줘야한다 by오버라이드(재정의)
+  - interface를 공유하면, [upcasting를 통해 배열로 묶기가 가능하다~](../workspace/220615-03_interface/src/InterfaceHi.java) 관리가 용이
+  - ★interface가 interface를 상속가능!! extends(O) implements(X) : 자식interface는 구현없이 추가할 추상메소드만 생성하면됨
+  - ★interface는 class가 아니므로 new연산자로 인스턴스생성 안된다!!!
 
-- 대소비교를위한 자바에 있는 기본 interface인 comparable -> compareTo(Object o)메소드
-- 이건 override이기 때문에 정렬기준을 1개만 세울 수 있다
-
-- 2개 이상의 항목으로 compareTo를 쓰고 싶다면 comparable이 아닌  Comparator interface를 사용해야한다
+- [Comparable](../workspace/220615-04_comparable/src/Main.java)  
+  - 비교 기준을 세우기 위한 자바에 있는 기본 interface -> compareTo(Object o) 추상메소드만 있음
+  - Override를 단축키로 생성하면 헤더를 그대로 들고와야하므로 파라미터에 Object type이 들어와야해서 매번 원하는 type으로 형변환이 필요
+  - -> 극복! `implements Comparable<데리고 오고싶은 클래스type>` ★제너릭 설정해주면 바로 그 type으로 쓸 수 있다~!
+  - java 기본 class인 Arrays와 연동되기 때문에, 내가 compareTo로 설정한 기준으로 Arrays.sort가 정렬해줌
+  - [기본의 회원관리프로그램에 비교기준 추가](../workspace/220614-01_objectClass/src/T0614.java)
