--- a/Java정리/220617.md
+++ b/Java정리/220617.md
@@ -1,6 +1,17 @@
-- 예외처리
-  - 예외를 잡아 그자리에서 처리하는방법
-  - 메소드가 예외를 발생시킨다고 기술하는 방법
+- 예외처리 try-catch
+  - 메인메소드에서 예외처리
+    - Exception은 super class~ <- (upcasting) NullPointerException ArithmeticException등등
+	- catch의 순서에 유의
+	- finally★ 
+  - 메소드가 예외를 발생시킨다고 기술하는 방법 
+    - 메소드 body자체에 `throw 던질예외객체생성`과정이 존재! ->메소드 뒤에 `throws 던질예외객체이름`
   - 나만의 예외 만들기
-- StringBuilder
-- StringBuffer
+    - throw로 나만의 예외상황을 만들 수 있다. if (나 짜증나게 하면) throw new NullPointerException();
+	- Exception 객체도 내가 맘대로 만들기 가능. if (기온 30도 넘으면) throw new 이게날씨냐예외();
+	- Exception 객체 생성시, RuntimeException를 상속했다면 코드 작성시 에러 날거란걸 알아도 컴파일 에러 안냄! -> 실행에러
+- String 클래스의 파생
+  - StringBuilder : 문자열 합연산 메모리 줄이기 <- String의 concat메소드 유사
+  - StringBuffer : 문자열 합연산 메모리 줄이기
+  - StringJoiner : 출력값 이쁘게 꾸미기
+  - StringTokenizer : 문자열 분리 <- String의 split메소드 유사
+ 
