--- a/Java정리/220616.md
+++ b/Java정리/220616.md
@@ -1,7 +1,51 @@
-- Comparator -> compare(객체1, 객체2)
-- 로컬클래스
-- 인터페이스
-  - 필드값 넣으면? fianl
-  - default쓰면? body생성가능 (기본값) -> 디폴트메소드
-  - static쓰기?
-  - private 쓰기?
+- [Comparator -> compare(객체1, 객체2)](../workspace/220615-04_comparable/src/T0615.java)  
+  : 외부에 implements Comarator하는 클래스를 생성하여 원하는 클래스의 값으로 비교기준을 세운다면,
+  똑같은 방식을 이용하여 또다른 클래스를 생성하면서 또다른 비교기준을 세울수 있을것이고,
+  가져다 쓰고싶은 비교기준이 있다면 해당 Comarator클래스를 객체생성해서 쓰면 됨!
+- [Local Class 지역클래스](../workspace/220616-01_localClass/src/Main.java)  
+  : 클래스 안의 메소드에서, 해당 메소드에 사용하기 위해 내부에 만든 클래스  
+  역시 중괄호 안에서만 사용 가능!
+- [Anonymous Class 익명클래스](../workspace/220616-01_localClass/src/Main.java)   
+  : 추상클래스(or인터페이스)를 상속받는 클래스를 굳이 만들어 낼 필요가 없는 경우에 사용 -> 한 번 쓰고 안 쓸 때
+  ```java  
+  public abstract class MyAbstractClass {
+	public abstract void myMethod();
+  }
+  //위의 추상메소드를 사용하기 위해서는 자식클래스가 만들어져서 구현되어야함
+  
+  public class MyKidClass extends MyAbstractClass {
+	@Override
+	public void myMethod() {
+		System.out.println("이걸하고싶었어");
+	}
+  }
+  
+  //실행을 위해서는 또 메인메소드에서 객체생성 필요
+  public class Main {
+    public static void main(String[] args) {
+        MyKidClass kid = new MyKidClass();
+        kid.myMethod();
+    }
+  }
+  
+  //중간의 자식클래스 생성과정 안 거치고 바로 메인메소드에 익명클래스를 만들어버리면 이렇게 됨
+  public class Main {
+    public static void main(String[] args) {
+        MyAbstractClass shortcut = new MyAbstractClass() {
+            @Override
+            public void myMethod() {
+                System.out.println("이걸하고싶었어");
+            }
+        };
+        shortcut.myMethod();
+    }
+  }
+  ```
+- [인터페이스 추가기능](../workspace/220616-01_localClass/src/Main2.java)
+  - 필드값 넣으면? -> (O) fianl상수가 됨
+  - default쓰면? -> body생성 (O) (디폴트메소드, 기본값)
+  - static쓰기? -> (O) 얘는 어디있어도 괜찮음
+  - private 쓰기? -> (△) 자바8버전 이상부터는 이것도 가능  
+----
+> 마무리문제  
+> : [동물원 관리 프로그램](../workspace/220616-01_localClass/src/Zoo.java)
