--- a/Java정리/220615.md
+++ b/Java정리/220615.md
@@ -8,7 +8,7 @@
   - ★추상클래스는 extends되어야 제 역할 하는 것!
 - 구현하기  
   - 추상클래스를 물려받은 자식은 부모의 추상메소드를 구체화(오버라이드 with body)해줘야할 의무! (안하면 얘도 추상적이됨)  
-  - 오바라이드는 우클릭 -> source -> override implement method에가면 빠른생성가능  
+  - 오버라이드는 우클릭 -> source -> override implement method에가면 빠른생성가능  
   - \[예제\] [Shape(추상클래스)](../workspace/220615-01_abstract/src/Shape.java), [Triangle(자식클래스)](../workspace/220615-01_abstract/src/Triangle.java), [Main(실행)](../workspace/220615-01_abstract/src/Main.java)
 
 - 종단선언  
@@ -26,9 +26,10 @@
   - ★interface가 interface를 상속가능!! extends(O) implements(X) : 자식interface는 구현없이 추가할 추상메소드만 생성하면됨
   - ★interface는 class가 아니므로 new연산자로 인스턴스생성 안된다!!!
 
-- [Comparable](../workspace/220615-04_comparable/src/Main.java)  
+- [Comparable -> compareTo(객체)](../workspace/220615-04_comparable/src/Main.java)  
   - 비교 기준을 세우기 위한 자바에 있는 기본 interface -> compareTo(Object o) 추상메소드만 있음
   - Override를 단축키로 생성하면 헤더를 그대로 들고와야하므로 파라미터에 Object type이 들어와야해서 매번 원하는 type으로 형변환이 필요
   - -> 극복! `implements Comparable<데리고 오고싶은 클래스type>` ★제너릭 설정해주면 바로 그 type으로 쓸 수 있다~!
   - java 기본 class인 Arrays와 연동되기 때문에, 내가 compareTo로 설정한 기준으로 Arrays.sort가 정렬해줌
   - [기본의 회원관리프로그램에 비교기준 추가](../workspace/220614-01_objectClass/src/T0614.java)
+
