--- a/Java정리/220623.md
+++ b/Java정리/220623.md
@@ -1,14 +1,25 @@
-- GUI > AWT, Swing, JavaFX
-- Swing > JFrame
+- GUI > AWT, Swing, JavaFX가 있는데 이 중에서, Swing인 **JFrame**클래스를 배울거임~
   - 기본 컴포넌트
     - JButton, JLebel, JChoice, JList, JTextField
   - 컨테이너 컴포넌트
     - JFrame, JDialog, JPanel
-
-- ActionListener라는 인터페이스가 있다.
-- 이 인터페이스는 @Override public void actionPerformed(ActionEvent e) {body생성 원하는대로..} 해야함
-- 여기서 ActionEvent란, 동작이 일어나는 컴포넌트에 대한 정보를 담은 클래스 -> .getSource() .getActionCommand()
-- 컴포넌트.addActionListener(ActionListener객체를 받음)
+- [JFrame](../workspace/220623-01_gui/src/Main.java)의 생성자, getter setter, 여러 메소드들,,
+  - `.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE)`, `.setVisible(true)` 항상해주라,,
+  - JFrame을 상속받는 자식클래스를 만들어 [나만의 프레임 만들기](../workspace/220623-01_gui/src/Main2.java) 가능
+  - 컴포넌트 레이아웃(배치) 바꾸기  
+    - [Jframe의 디폴트?](../workspace/220623-01_gui/src/MyFrame2Test.java) -> border(동서남북 가득)  
+	- [JPanel의 디폴트?](../workspace/220623-01_gui/src/MyColorFrame.java) -> flow(가로로 흐름)
+    - [레이아웃 정리](../workspace/220623-01_gui/src/Main5.java) : flow/border/box/grid/null★
+  - 동작을 인식하여 또 다른 동작으로 연결시키기?★
+    - `동작하는컴포넌트.addActionListener(ActionListener라는 인터페이스를 받음)`
+	- ActionListener인터페이스는 `@Override public void actionPerformed(ActionEvent e) {body생성 원하는대로..}` 해야함  
+    - ActionEvent 클래스는 동작한 컴포넌트에 대한 정보를 담고있다 -> `.getSource()`, `.getActionCommand()` 가능 -> [예제](../workspace/220623-01_gui/src/Main4.java)  
+	- [예제1](../workspace/220623-01_gui/src/MyColorFrame.java) : 클릭으로 색깔바꾸기  
+	- [예제2-1](../workspace/220623-01_gui/src/MyCounter.java), [예제2-2](../workspace/220623-01_gui/src/MyCounter2.java) : 숫자 증가 감소버튼 <-`String.valueOf(숫자)`
+	- [예제3](../workspace/220623-01_gui/src/Main3.java) : 버튼 활성화/비활성화 <-반복문으로 만든 버튼들 기억할 수 있게 어디 담아두기
+  - [교재예제](../workspace/220623-01_gui/src/Main6.java)  
+    - JTextField는 `.getText`로 입력받은 값을 가져올 수 있다
+    - `JOptionPane.showMessageDialog(dialog의 부모창, text)`로 안내창 
 
 - quick fix : `ctrl + 1` -> 지역변수를 필드로 만들기 가능
 
