--- a/Java정리/220624.md
+++ b/Java정리/220624.md
@@ -1,10 +1,17 @@
-- jar실행파일로 배포하기 : 우클릭 -> export -> java -> runable jar file
+- [JCheckBox](../workspace/220624-01_jframe/src/Main.java) : 여러개 선택가능
+- [JRadioButton](../workspace/220624-01_jframe/src/Main3.java) : 여러개 중 하나만 선택가능 (group으로 묶어야함)  
 
-- JCheckBox
-  - addItemListener(ItemListener인터페이스 객체)
+- ActionListener : 클릭
+- [ItemListener](../workspace/220624-01_jframe/src/Main.java) : 상태변화
+  - `.isSelected()` ture false 반환
+  - `.getStateChange()`상태를 정수값으로 반환 <- 각 상태는 ItemListener클래스에 final상수로 정의되어있다
   - [ItemListener와 ActionListener의 차이???](../workspace/220624-01_jframe/src/Main2.java)
-- JRadioButton
-- ItemListener, ActionListener, FocusListener
+- [FocusListener](../workspace/220624-01_jframe/src/Main4.java) : tab(focus on/off)
 
-- help -> install new software -> https://download.eclipse.org/windowbuilder/1.9.7/
-- 우클릭 -> open with -> windowbuilder -> 디자인탭으로 가서 막 수정가능
+- jar실행파일로 배포하기 : 우클릭 -> export -> java -> runable jar file  
+
+- help -> install new software -> https://download.eclipse.org/windowbuilder/1.9.7/  
+- 우클릭 -> open with -> windowbuilder -> 디자인탭으로 가서 막 수정가능  
+----
+> 마무리문제  
+> : [단위변환기](../workspace/220624-01_jframe/src/Main4.java)
