--- a/Java정리/220627.md
+++ b/Java정리/220627.md
@@ -1,18 +1,41 @@
+### 마우스이벤트
 - [MouseListener](../workspace/220627-01_listener/src/Main.java) : 마우스와 관련된 동작들
-  - mouseReleased, mousePressed, mouseExited, mouseEntered, mouseClicked
+  - mouseReleased, mousePressed, mouseExited, mouseEntered, mouseClicked 추상메소드
   - addMouseListener(MouseListener)로 5개 오버라이드 할 필요없이, [addMouseListener(MouseAdapter)](../workspace/220627-01_listener/src/Main2.java)로 1개만 정의 가능!
+  - 클릭에 대한 반응은 MouseListener의 mouseReleased, mousePressed로도 좋지만 ActionListener를 써도됨
 - [MouseMotionListener](../workspace/220627-01_listener/src/Main3.java)  
+  - mouseMoved, mouseDragged 추상메소드
 - [버튼잡기 응용](../workspace/220627-01_listener/src/Main4.java)
 - [외부 이미지 넣기](../workspace/220627-01_listener/src/Main5.java)
 
-- JPasswordField
-- JTextArea
-- JScrollPane
-- JSplitPane //여러정보
-- JTabbedPane //여러정보
-- CardLayout
+### 이미지파일 연결하기  
+```java  
+Toolkit kit = Toolkit.getDefaultToolkit();
+Image img = kit.getImage(상대경로 or 절대경로(url));
 
-- 자원 패키지 하나 만들기
-  - 이 패키지(폴더)를 찾아가야함 "폴더이름/파일이름"
-- project 우클릭 - new - source folder 하나 만들기
-  - 따로 만들어 놨어도 src와 같은 곳이라고 인식되므로 폴더 찾아갈 필요 없다  
+URL url = this.getClass().getClassLoader().getResource("상대경로"); //->url얻어내기
+```
+- 자원관리?
+  - 자원 패키지 하나 만들기 : 이 패키지(폴더)를 찾아가야함 "폴더이름/파일이름"
+  - project 우클릭 - new - source folder 하나 만들기 : 따로 만들어 놨어도 src와 같은 곳이라 인식되므로 폴더 찾아갈 필요 없다  
+  
+### 키보드이벤트
+- [KeyListener](../workspace/220627-02_key/src/Main.java)
+  - keyTyped, keyReleased, keyPressed 추상메소드
+  - addKeyListener(KeyListener)로 3개 오버라이드 할 필요없이, addKeyListener(KeyAdapter)로 1개만 정의 가능!
+- 컴포넌트 방향키로 움직이게 하는 [예제](../workspace/220627-02_key/src/Main.java)
+
+### 화면영역 더보기
+- 스크롤 : [JScrollPane](../workspace/220627-02_key/src/Main2.java)  
+  `JScrollPane scrl = new JScrollPane(스크롤 붙이고 싶은 컴포넌트);`
+- 나누기 : [JSplitPane](../workspace/220627-02_key/src/Main3.java)
+- 탭 : [JTabbedPane](../workspace/220627-02_key/src/Main3.java)  
+  `JTabbedPane tab = new JTabbedPane();`  
+  `tab.add("탭이름", 컴포넌트);`  
+- 카드레이아웃 : [CardLayout](../workspace/220627-02_key/src/Main4.java) (여러 패널을 겹쳐놓고 보고자 하는 패널만 visible로 만드는 방법)
+
+- JTextField
+  - `.setText(내용)` : 내용 전면교체, `.append(내용)` : 내용추가
+----
+> 마무리문제  
+> : [로그인/회원가입](../workspace/220627-02_key/src/T0627.java)
