--- a/Java정리/220628.md
+++ b/Java정리/220628.md
@@ -2,9 +2,26 @@
 
 ### 부가창
 - JDialog
+  - modal -> true면 창이 닫히고 나서야 흘러감
+  - EXIT_ON_CLOSE / DISPOSE_ON_CLOSE
+  - `JOptionPane.showConfirmDialog()` : 확인창을 출력해 y/n/c를 정수값으로 반환 
+  - `JOptionPane.showInputDialog()` : 입력창을 출력해 입력값을 반환
 
-
+### 윈도우입력
+- WindowListener
+  - windowOpened, windowIconified, windowDeiconified,  
+    windowDeactivated, windowClosing, windowClosed, windowActivated 추상메소드  
+  - addWindowListener(WindowListener)로 7개 오버라이드 할 필요없이, addWindowListener(WindowAdapter)로 1개만 정의 가능!  
 ----
-1.로또룰 공유
-2.gui를 그립니다. 버튼클릭시 연결되는 흐름
-3.선생님께 제출 -> 검사
+> 팀프로젝트  
+> 1.로또룰 2.gui -> 버튼클릭시 연결되는 흐름 3.검사받기
+> -----
+> Q. 로또번호를 어떤 자료타입에 담을것인가? set or array? 
+> A. set을 쓰면 인덱스번호로 숫자 개별에 접근 안됨 array는 인덱스번호가 있어서 접근가능함과 동시에, 크기도 정해진대로 관리가능
+> Q. 로또번호 자료를 어떻게 외부 클래스들에서 공유할 것인가? static을 쓰면됨?
+> Q. 작업시, 서로 다른 gui나 로직을 어떻게 추합할 것인가? 잘~?
+> 필요한 과정 : 6 버튼에 담은 숫자들을 arr에 담기 -> arr에 담은 숫자들을 6버튼에 출력하기 
+> 6개 이상 누르면 에러나는거 고치기, regNum누르면 빠지게~
+> 추가하고싶은 과정 : 회차별 게임 당첨여부 로그 조회
+> 로또2 와 로또3은 한몸인데 로또3에서 로또4 로 넘어가는 과정에서 2와 3이 같이 닫히게 하고싶다~~ -> 3은 지꺼니깐 잘 되는데 2번이 문제임
+
