--- a/Java정리/220629.md
+++ b/Java정리/220629.md
@@ -1,24 +1,49 @@
-- svn(서브버전) -> git 버전관리프로그램의 세대교체
+### eclips에서 git사용
+- 버전관리 프로그램 svn(서브버전) -> git로 얼추 세대교체됨
+- 필요한 창들  
+  - window -> show view -> other -> repository검색 -> git repository  
+  - window -> show view -> other -> history검색 -> history
+### 로컬저장소
 - team -> share project -> local repository생성
-- window -> show view -> other -> repository검색 -> git repository
 - team -> commit
-- window -> show view -> other -> history검색 -> history
-- reset
-- revert : 과거의 기록을 최신의 기록으로 끌어올림
-- 로컬repo, 원격 repo
-- 원격 repo 중 git을 쓰는건 많다 github, gitmap, soucetree... 근데 젤 많이 쓰는게 깃헙
-- profile name id와 같게 세팅
-- Developer settings -> Personal access tokens -> generate new token (eclips에서 계정 접근할때 쓸거임) (체크 다 하면됨)
-- note값은 githubToken
-- ★★★★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★★★★
-- team -> remote -> push 에서 깃허브 레포지터리 링크랑, 아이디랑 위에 비번 입력
-- add all branches spec 눌르기;;
-- git repository에서 clone -> 깃허브 레포지터리 링크랑, 아이디랑 위에 비번 입력
-- git repository에서 클론받은 폴더를 워킹스페이스로 올리기(우클릭 import project)
-- 팀장님은!! colaboration -> add people 조원
-- pull한 후에 push하기~
-- a와 b가 같은 문장 수정후에 a먼저 push,, 그걸 모르고 나 수정후에 안 올라가길래 pull받으면 고구마 뜬다~ 우클릭해서 merge tool사용
-- ignore우클릭으로 만들고 더블클릭해서 우클릭으로 ignore로 보낸 애들 다 보관한 후 ignore파일 한번 push해서
-- commit -> pull -> push만 하면 된다~!!!!!!!!
-- ★★★★pull은 파일 열듯이 이전 파일로 돌아가는게 아니라 참조하듯이 한번 참조링크 열었으면 끝인거,,,
-(젤 최신 김효정을 데려와서 안경씌우고 커밋한 후에 다시 김효정 불러오면 안경 안 쓴 김효정을 데려올 수 없음! 왜냐면 지금 그 김효정이 있어서) 
+### 원격저장소(GitHub)
+- 원격저장소 중 git을 쓰는건 많다 github, gitmap, soucetree... 근데 젤 많이 쓰는게 깃헙
+#### 1. 깃허브 세팅  
+  - profile name을 id와 같게 세팅하기
+  - Developer settings -> Personal access tokens -> generate new token 채크 다 해서 생성 (eclips에서 계정 접근할 때 쓰는 용도)
+  - token은 note이름 다르게 해서 계속 생성 가능함.. 하지만 하나 만료일 무한으로 해서 잘 만들어 놓고 ghp잘 기억해 놓자!!
+#### 2. 깃허브 저장소 생성
+#### 3. 이클립스와 깃허브 저장소 연결
+  - 아무것도 없는(readme파일조차도) 깃허브 저장소에, 이클립스에서 만들었던 프로젝트 push함으로써 연결하기
+    - 이클립스에서 push하고자 하는 프로젝트 우클릭 -> team -> remote -> push 
+    - 깃허브 저장소 링크랑, id, ghp 입력 -> 아무것도 없는 저장소라 branch도 없으니 add all branches spec 눌러 하나 생성
+  - 깃허브 저장소에 있는 파일들을, 이클립스로 clone 해옴으로써 연결하기
+    - 이클립스의 git repository view에서 clone -> 깃허브 저장소 링크랑, id, ghp 입력
+    - git repository view에 올라온 클론받은 폴더를 workingspace로 올리기(우클릭 import project)
+- ★★★★commit -> pull -> push만 기억하면 된다~!
+### merge상황 발생시?
+  - a와 b가 같은 최신버전ㄱ을 pull해온 뒤, a가 먼저 수정 후 commit(O), push(O)하여 버전ㄴ을 만듬
+  - 그걸 모르고 b는 ㄱ을 수정 후 버전ㄷ 만들고 commit(O), push(X)!! 왜냐하면 ㄴ을 수정한 것이 push되어야 흐름이 맞는데 ㄱ을 수정한 ㄷ을 들이미니깐!!
+  - 따라서 push 완료된 저장소의 최신버전ㄴ을 가져오기위해 pull(O) 받으면 고구마 발생
+  - a가 한 ㄱ->ㄴ을 쓸건지, b가 한 ㄱ->ㄷ을 쓸건지, 혹은 적절히 병합할지를 정해야 함!! 그게 버전ㄹ!! (ㄱ -> ㄴ,ㄷ -> ㄹ 흐름)
+  - 위의 과정은 java파일 자체에서 해도 되고, 우클릭 -> team -> merge tool사용해도 되고
+### pull의 개념
+  - 파일을 여는것과는 다르다!! (최신버전 파일 열어서 수정 후, 저장 안 하고 다시 그 파일 열면 수정 전의 것으로 돌아감)
+  - pull은 한번 최신버전 가져왔으면 끝!! (최신버전 pull해서 수정 후, commit 안 하고 다시 pull 해도 다시 수정전의 최신버전으로 돌아가는게 아니다)
+### ignore파일?
+  - ignore : 내가 작업하는 공간에는 필요하지만 원격저장소에 push를 무시해야 하는 경우
+  - add되기 전의 stage에서 ignore할 파일 우클릭 -> ignore 
+  - ignore파일이 txt로 생성되며 그 안에 리스트로 ignore할 파일이름이 추가됨
+  ```  
+  ## ignore에서의 주석처리
+  ## 파일 무시  
+  test.txt
+  ## 다음과 같은 확장자는 전체 무시
+  *.text
+  *.exe
+  *.zip
+  ## 폴더 무시
+  test/
+  ```  
+  - ignore파일 한번 add commit push해서 원격저장소에 보내놔야한다~
+  - 주의 : 한 번이라도 commit된 애들은 뒤늦게 ignore에 넣어봤자 무시 안됨 기존의 .git의 캐시 지우는 작업이 필요함.. 구글링ㄱㄱ
