--- a/Java정리/220628.md
+++ b/Java정리/220628.md
@@ -1,4 +1,5 @@
 - 6/23 setLocationRelativeTo(null);
+- [main1](../workspace/220628-01_anotherjframe/src/Main.java) [main2](../workspace/220628-01_anotherjframe/src/Main2.java)
 
 ### 부가창
 - JDialog
