--- a/Java정리/220708.md
+++ b/Java정리/220708.md
@@ -1,9 +1,17 @@
-- 파일 입출력
-  - 외부에 있는 자원을 연결하기
-  - File
+###외부에 있는 자원을 연결하기
+- [File](../workspace/220708-01_fileinout/src/Main.java)
+  - File("경로"), File안에는 file도 들어가고 directory도 들어감
+  - [상대경로](../workspace/220708-01_fileinout/src/Main2.java)
+    - .\\ : 현재경로
+	- ..\\ : 상위경로
+    - getAbsolutePath(), getAbsoluteFile() : 있는 그대로의 경로 다 보여줌
+    - getCanonicalPath(), getCanonicalFile() : .\\ ..\\ 해석해줌
+  - .mkdir() 
   - FileInputStream / FileOutputStream <-바이트단위
   - FileReader/ FileWriter <-문자단위
   - PrintWriter / BufferedReader <-줄단위
   
-  - 메모장만들기
+###메모장만들기
+  - JFileChooser
   - fileFilter
+  
