--- a/Java정리/220711.md
+++ b/Java정리/220711.md
@@ -1,12 +1,17 @@
-###데이터 읽고 쓰기
-  - [txt파일로 저장, 가져오기](../workspace/220711-01_data/src/Main.java)
-    : PrintWriter와 BufferedReader를 사용 -> 문자열 단위니깐, 코드로 다루기 위해서는 형변환이 수반되어야 함
-	: 사람이 읽을 수 있고, 다른 프로그래밍 언어에서도 사용 가능(프로그래밍언어 -> 문자로 변환해 사용하니깐)
+### 데이터 읽고 쓰기
+  - [txt파일로 저장, 가져오기](../workspace/220711-01_data/src/Main.java)  
+    : PrintWriter와 BufferedReader를 사용 -> 문자열 단위니깐, 코드로 다루기 위해서는 형변환이 수반되어야 함  
+	: 사람이 읽을 수 있고, 다른 프로그래밍 언어에서도 사용 가능(프로그래밍언어 -> 문자로 변환해 사용하니깐)  
   - [dat파일로 저장, 가져오기](../workspace/220711-01_data/src/Main2.java)  
     : DataOutputStream와 DataInputStream를 사용 -> 자료형 단위 그 자체로 다룸  
-	: 사람이 읽을 수 없고, java형 원시type이니(int, double등..) java에서만 사용됨
-	: [output예제](../workspace/220711-01_data/src/Main3.java), [input예제](../workspace/220711-01_data/src/Main4.java)
+	: 사람이 읽을 수 없고, java형 원시type이니(int, double등..) java에서만 사용됨  
+	: [output예제](../workspace/220711-01_data/src/Main3.java), [input예제](../workspace/220711-01_data/src/Main4.java)  
   - ser파일로 저장, 가져오기  
-    : [ObjectOutputStream](../workspace/220711-01_data/src/Main5.java)와 [ObjectInputStream](../workspace/220711-01_data/src/Main6.java)를 사용 -> Object자체를 가져다가 읽고쓰고.. 
-	: 대신에 해당 Object class에 implements Serializable가 필요
-	: 필드에 transient 추가 -> 직렬화에서 제외하기
+    : [ObjectOutputStream](../workspace/220711-01_data/src/Main5.java)와 [ObjectInputStream](../workspace/220711-01_data/src/Main6.java)를 사용 -> 더 발전해서 Object자체를 가져다가 읽고쓰고..   
+	: 대신에 해당 Object class에 implements Serializable가 필요  
+	:직렬화에서 제외되는 것 -> transient 추가된 필드 & static한 필드  
+----
+> 마무리문제  
+> [문제1](../workspace/220711-02_exercise/src/Ex1.java) : 수를 정렬해서 file로  
+> [문제2](../workspace/220711-02_exercise/src/Ex2.java) : 암호화/복호화  
+> [문제3](../workspace/220711-02_exercise/src/Ex3.java) : 사람정보 입출력  
