--- a/Java정리/220715.md
+++ b/Java정리/220715.md
@@ -1,11 +1,32 @@
 - jdbc는 인터페이스 -> 구현한게 driver
 - url은 uri의 좀더 구체적인 버전
 
-- DB연결순서
- - 드라이버적재 : Class.forName
- - 데이터베이스에 접속 : Connection
- - 명령어 보내기 : Statement
- 
-- DB연결법
- - 매번 클래스마다 연결시키기
- - 연결시키는 기능의 클래스를 만들고 매번 불러오기
+### DB연결순서
+1. 드라이버적재 : Class.forName
+  - 각 드라이버는 DB회사마다 제공한다
+  - ![driver]()
+2. 데이터베이스에 접속 : Connection 인스턴스
+  - DriveManager의 getConnection메소드 사용
+  - Connection conn = DriveManager.getConnection(url,id,pw);
+3. 명령어 보내기 : Statement 인스턴스
+  - Connection의 createStatement메소드 사용
+  - Statement stmt = conn.createStatement();
+  - .executeUpdate(select 외 명령어) -> 실행이 일어난 행 개수를 반환
+  - .executeQuery(select) -> 해당되는 테이블을 ResultSet의 형태로 반환  
+    - ResultSet : .next() .getInt("칼럼이름") .getString("칼럼이름")  
+	
+### DB연결법
+- [매번 연결시키기](../workspace/220715-01_dbconnection/src/Main.java)
+- [메소드로 따로 만들기](../workspace/220715-01_dbconnection/src/Main3.java)
+- 연결클래스를 따로 만들고 import하기
+  1. [Properties파일 만들기](../workspace/_DB_UTIL/src/mysql.properties) : 부를이름=property형태
+  2. [클래스 만들기](../workspace/_DB_UTIL/src/DBUtil.java)  
+    - InputStream이 1에서의 properties파일을 읽어내고,
+	- 읽어낸 InputStream를 Properties객체에 로드시켜주면,
+	- properties는 .getProperty매소드를 이용해 properties파일을 읽어낸다!!
+  3. 위에서 만든 프로젝트를, [갖다 쓸 프로젝트](../workspace/220715-02_connectbyfile/src/TestConn.java)의 java build path에서 추가하기  
+    - 닫아줄 때는 열 때와 반대 순서로 진행~!  
+----
+> 마무리문제  
+> : [도서관리프로그램](../workspace/220715-02_connectbyfile/src/BookManager.java)  
+> : 선생님풀이~담주에~
