--- a/Java정리/220718.md
+++ b/Java정리/220718.md
@@ -1,10 +1,12 @@
-- Data Access Object = DAO
 - 도서관리프로그램 -> 선생님 풀이~!
   - BookT 클래스
   - BookManagerT 클래스  
+    - Data Access Object = DAO
     - 기능을 가진 메소드에서, catch문을 없애고 그냥 메소드 자체에 throws 걸어줌~~
     : 이래야 메인에서도 Exception e를 받아갈 수 있음 
   - Ttest 클래스
   - BookConsolApp 클래스
   
- 
+----
+> 마무리문제  
+> : 레스토랑프로그램
